# FaceID-Uther

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README.txt  deploy_vison.ps1  main.cpp  main.cpp.bak
UpdaeLog/vison 1.0.0/: attendance.db  readme.txt
UpdaeLog/vison 1.1.0/: attendance.db
UpdaeLog/vison 1.1.1/: attendance.db  readme.txt
UpdaeLog/vison 1.2.0/: attendance.db  readme.txt
UpdaeLog/vison 1.3.0/: attendance.db  readme.txt
UpdaeLog/vison 1.4.0/: attendance.db  readme.txt
UpdaeLog/vison 1.5.0/: attendance.db
UpdaeLog/vison 1.6.0/: attendance.db
UpdaeLog/vison 2.0.0/: attendance.db
backend/: Camera.cpp  Camera.h  Database.cpp  Database.h  Exporter.cpp  Exporter.h  Face.cpp  Face.h
